# AnnoABSA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  absa_annotation_ui.html  annoabsa  architecture_map.md  cli.py  eval.py  eval_exc.py  main.py  package-lock.json  package.json  prompt_example.txt  pyproject.toml  requirements.txt  setup.bat  setup.sh  testcases.md
.github/: CODEOWNERS
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agentdocs/: CONTRIBUTING.md  ProjectPrimer.md  backend_reference.md  claude-skill-knowledge.md  mainpy_functions.md  post_feature_checklist.md  refactor_report.md  tasks.md  testcases.md
app/: __init__.py  config.py  data.py  positions.py
cli/: __init__.py  config.py  convert.py  runner.py
docs/: CONFIGURATION.md  architecture_map.md  cli_table.tex
evaluation/: annotationstudy.ipynb  eval.py  eval_exc.py  pool_a.json  pool_b.json  user_study.ipynb
examples/: example_config.json  restaurant_reviews.csv  restaurant_reviews.json  semeval_absa.json  semeval_deepseek_labeled.csv  semeval_qwen_labeled.csv  semeval_reviews.csv  user_dataset.csv
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
models/: schemas.py
services/: active_learning.py  llm_providers.py  nlp_helpers.py  prediction.py
tests/: conftest.py  test_active_learning.py  test_chat_predictions.py  test_cli.py  test_export.py  test_learning_routes.py  test_live_prediction.py  test_llm_providers.py  test_main_helpers.py  test_nlp_helpers.py  test_prediction.py  (+3 more)
(+147 files in other folders)
