[project]
name = "annoabsa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "rank-bm25",
    "openai",
    "ollama",
    "anthropic",
    "python-multipart",
    "nlptoolkit-sentinet",
    "nlptoolkit-wordnet",
    "nlptoolkit-dictionary",
    "nlptoolkit-morphologicalanalysis",
    "scikit-learn",
    "sentence-transformers",
    "transformers",
    "torch",
    "setuptools<75",
]
